[tool.poetry]
name = "agent-projetc-back"
version = "0.0.1"
description = ""
authors = ["Guty04 <86425@sistemas.frc.utn.edu.ar>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
